--- a/HMM.ipynb
+++ b/HMM.ipynb
@@ -16,11 +16,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "Ug8rw5GS3zG9"
+        "id": "Ug8rw5GS3zG9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09c3573b-2125-4ab1-fa6b-f89b364751b0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.8 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.8 MB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.9/1.8 MB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m20.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m14.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "source": [
         "!pip -q install --upgrade pip\n",
         "!pip -q install \"hmmlearn>=0.3.2\"\n"
@@ -39,7 +52,7 @@
       "metadata": {
         "id": "4sa3U9ht-3HQ"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -56,9 +69,9 @@
           "height": 206
         },
         "id": "2jKi53vdAZYV",
-        "outputId": "7ecb4a80-5f5e-4173-f8d9-1b7ead0fbb1b"
+        "outputId": "99c5d488-5432-4592-de73-af41d55d193b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -73,7 +86,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7545a6cd-5cc5-4b9a-9990-9789565c1863\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bf32330d-6d50-40df-a977-6cb654bc3417\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -140,7 +153,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7545a6cd-5cc5-4b9a-9990-9789565c1863')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf32330d-6d50-40df-a977-6cb654bc3417')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -192,12 +205,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7545a6cd-5cc5-4b9a-9990-9789565c1863 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bf32330d-6d50-40df-a977-6cb654bc3417 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7545a6cd-5cc5-4b9a-9990-9789565c1863');\n",
+              "        const element = document.querySelector('#df-bf32330d-6d50-40df-a977-6cb654bc3417');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -217,8 +230,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e5cfe304-5911-46c7-8ad4-5d35f286b662\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e5cfe304-5911-46c7-8ad4-5d35f286b662')\"\n",
+              "    <div id=\"df-5fce7100-b331-4451-b35b-206723bcd512\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5fce7100-b331-4451-b35b-206723bcd512')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -337,7 +350,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e5cfe304-5911-46c7-8ad4-5d35f286b662 button');\n",
+              "            document.querySelector('#df-5fce7100-b331-4451-b35b-206723bcd512 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -354,7 +367,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 3
         }
       ]
     },
@@ -374,7 +387,7 @@
       "metadata": {
         "id": "vbiLjR7AWdg8"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -388,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TTVUbNKbl3wW",
-        "outputId": "0cd05966-34a3-4eee-e8c3-cff407f48ada"
+        "outputId": "871002d6-45b4-4615-da5d-775b135cda21"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +429,7 @@
       "metadata": {
         "id": "3xB28akAVrAf"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -444,9 +457,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ii0-4KtKJ72T",
-        "outputId": "9f2e269f-e1ae-4920-dde7-828a21b8a383"
+        "outputId": "09ceebd4-1e58-4e01-fcaf-8d642851b57b"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +490,7 @@
       "metadata": {
         "id": "47u70sznNcSo"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -490,9 +503,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xj1EzCv_NqXy",
-        "outputId": "0122df9a-3c8d-485e-ac3c-12d38e10ee1a"
+        "outputId": "e6d32695-cfe6-4b7a-d9cf-d3482c12a1b6"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +521,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 9
         }
       ]
     },
@@ -535,7 +548,7 @@
       "metadata": {
         "id": "dkZvkQPm9_QW"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -578,7 +591,7 @@
       "metadata": {
         "id": "Eg-6fzRojew1"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -635,7 +648,7 @@
       "metadata": {
         "id": "jCVgB7XBMZdU"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -719,7 +732,7 @@
       "metadata": {
         "id": "AJSiQ1WMjy0-"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -740,9 +753,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lpiTOFoRXsgz",
-        "outputId": "c3c7b3d7-0491-4b47-e927-5c431be15a73"
+        "outputId": "88d20309-a936-499d-e22e-f11f3c6a1334"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +814,7 @@
       "metadata": {
         "id": "sT8U7WnjFSc-"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -850,7 +863,7 @@
       "metadata": {
         "id": "Ho7tl91tE4dW"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -864,9 +877,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 345
         },
-        "outputId": "cd7f273c-4ab9-4015-8bb8-ea9705cf948c"
+        "outputId": "54af8ea7-0e12-41ec-8b75-f630cda30d7d"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -983,7 +996,7 @@
       "metadata": {
         "id": "Ul_VipkaUeLd"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -999,9 +1012,9 @@
           "height": 429
         },
         "id": "oGKmtTSWf1FT",
-        "outputId": "4062d4ec-e4cb-4e88-e98b-6b8813775a93"
+        "outputId": "bbe7b0d1-d1c0-4d65-ce33-a0ba4b9b222b"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1099,9 +1112,9 @@
           "height": 429
         },
         "id": "vPDv-MzYC8z-",
-        "outputId": "ad18e9c5-96bb-4112-8ced-ff862ee88dcd"
+        "outputId": "2f91d341-e520-4213-f043-2a890dbd15da"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1197,7 +1210,7 @@
       "metadata": {
         "id": "N9K3YbvGhaUl"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1218,9 +1231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G1tbMytIhcFY",
-        "outputId": "d70eabf3-fe19-4f75-e451-4f666a8aabac"
+        "outputId": "555bd069-d390-4b22-a2be-c67cdd04fcfa"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1244,7 +1257,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 22
         }
       ]
     },
@@ -1261,8 +1274,8 @@
         "    spi_col: str = \"spi_6\",\n",
         "    horizon: int = 1,                          # compare probs at t to SPI class at t+h\n",
         "    prob_col_tpl: str = \"p_state{state}_h{h}\", # how your columns are named\n",
-        "    dry_thr: float = -1.25,\n",
-        "    wet_thr: float =  1.25,\n",
+        "    dry_thr: float = -0.5,\n",
+        "    wet_thr: float =  0.5,\n",
         "    train_mask: pd.Series | np.ndarray | None = None,   # boolean mask used to learn mapping\n",
         "    state_to_class: dict[int, int] | None = None        # optional manual mapping {state: 0/1/2}\n",
         "):\n",
@@ -1393,7 +1406,7 @@
       "metadata": {
         "id": "5nnKnQB0AkWD"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1407,9 +1420,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZPdniCK_A6Ma",
-        "outputId": "507cc9c8-a0e9-4218-87b5-479f118cdfd6"
+        "outputId": "252b5184-bd6f-4607-ce32-37a15d087c1e"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1471,29 +1484,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-yD2PXaD-JqC",
-        "outputId": "74e882fb-b954-4ccc-911c-9f7d129ebd4b"
+        "outputId": "a24f5848-39ce-41b2-f09f-2def4d5ba866"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "{0: 0, 1: 1, 2: 2}\n",
-            "0.6105082809822958\n",
+            "0.7498572244431754\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "         dry      0.195     1.000     0.326       113\n",
-            "     neutral      0.968     0.524     0.680      1383\n",
-            "         wet      0.547     0.906     0.682       255\n",
+            "         dry      0.781     0.840     0.810       539\n",
+            "     neutral      0.607     0.762     0.676       597\n",
+            "         wet      0.960     0.659     0.781       615\n",
             "\n",
-            "    accuracy                          0.611      1751\n",
-            "   macro avg      0.570     0.810     0.563      1751\n",
-            "weighted avg      0.857     0.611     0.658      1751\n",
+            "    accuracy                          0.750      1751\n",
+            "   macro avg      0.783     0.754     0.756      1751\n",
+            "weighted avg      0.785     0.750     0.754      1751\n",
             "\n",
-            "[[113   0   0]\n",
-            " [467 725 191]\n",
-            " [  0  24 231]]\n"
+            "[[453  86   0]\n",
+            " [125 455  17]\n",
+            " [  2 208 405]]\n"
           ]
         }
       ]
