--- a/LSTM_bare_test.ipynb
+++ b/LSTM_bare_test.ipynb
@@ -1993,8 +1993,8 @@
         "CV_FIRST_TRAIN = 520          # first train span\n",
         "CV_VAL_SPAN    = 150          # each validation span\n",
         "CV_STEP        = 150          # slide by 150 each fold\n",
-        "TRAINVAL_END   = pd.Timestamp(\"2022-12-31\")  # CV/trainval cutoff\n",
-        "TEST_START     = pd.Timestamp(\"2023-01-01\")  # test period start\n",
+        "TRAINVAL_END   = pd.Timestamp(\"2020-12-31\")  # CV/trainval cutoff\n",
+        "TEST_START     = pd.Timestamp(\"2021-01-01\")  # test period start\n",
         "\n",
         "# Require that the model predicts ALL classes in each validation fold (optional)\n",
         "REQUIRE_ALL_CLASSES_VAL = False   # set True if you want this constraint on VAL\n",
@@ -2295,18 +2295,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ghDdhdtTbF0",
-        "outputId": "28bfbb0b-e6b5-4033-b4f2-2b767ef8f0ed"
+        "outputId": "8d741cda-298f-4498-c608-f13a8b0bd190"
       },
-      "execution_count": 37,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Index dtype: datetime64[ns]\n",
-            "Range: 1992-01-12 00:00:00 → 2025-07-20 00:00:00\n",
-            "Train/Val span: 1992-01-12 .. 2022-12-25 | n=1614\n",
-            "Test span:      2023-01-01 .. 2025-07-20 | n=134\n"
+            "Range: 1992-01-05 00:00:00 → 2025-07-20 00:00:00\n",
+            "Train/Val span: 1992-01-12 .. 2020-12-27 | n=1510\n",
+            "Test span:      2021-01-03 .. 2025-07-20 | n=238\n"
           ]
         },
         {
@@ -2325,7 +2325,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HP {'units': 32, 'dense': 16, 'dropout': 0.1, 'lr': 0.001} -> mean Val F1=0.334, mean Val Acc=0.412 | folds=7\n"
+            "HP {'units': 32, 'dense': 16, 'dropout': 0.1, 'lr': 0.001} -> mean Val F1=0.331, mean Val Acc=0.404 | folds=6\n"
           ]
         },
         {
@@ -2344,39 +2344,119 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HP {'units': 64, 'dense': 16, 'dropout': 0.1, 'lr': 0.001} -> mean Val F1=0.303, mean Val Acc=0.407 | folds=7\n",
-            "HP {'units': 64, 'dense': 32, 'dropout': 0.2, 'lr': 0.001} -> mean Val F1=0.330, mean Val Acc=0.391 | folds=7\n",
+            "HP {'units': 64, 'dense': 16, 'dropout': 0.1, 'lr': 0.001} -> mean Val F1=0.310, mean Val Acc=0.379 | folds=6\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HP {'units': 64, 'dense': 32, 'dropout': 0.2, 'lr': 0.001} -> mean Val F1=0.327, mean Val Acc=0.382 | folds=6\n",
             "\n",
             "=== BEST HPARAMS FROM CV ===\n",
             "{'units': 32, 'dense': 16, 'dropout': 0.1, 'lr': 0.001}\n",
-            "Mean Val F1=0.334, Mean Val Acc=0.412\n",
-            "Fold 1: Val F1=0.293, Val Acc=0.313, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
-            "Fold 2: Val F1=0.405, Val Acc=0.455, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
-            "Fold 3: Val F1=0.411, Val Acc=0.493, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
-            "Fold 4: Val F1=0.281, Val Acc=0.448, pred_classes=[np.int64(-1), np.int64(1)]\n",
-            "Fold 5: Val F1=0.250, Val Acc=0.291, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
-            "Fold 6: Val F1=0.366, Val Acc=0.433, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
-            "Fold 7: Val F1=0.329, Val Acc=0.448, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
+            "Mean Val F1=0.331, Mean Val Acc=0.404\n",
+            "Fold 1: Val F1=0.328, Val Acc=0.366, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
+            "Fold 2: Val F1=0.380, Val Acc=0.418, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
+            "Fold 3: Val F1=0.359, Val Acc=0.522, pred_classes=[np.int64(-1), np.int64(1)]\n",
+            "Fold 4: Val F1=0.278, Val Acc=0.388, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
+            "Fold 5: Val F1=0.244, Val Acc=0.284, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
+            "Fold 6: Val F1=0.397, Val Acc=0.448, pred_classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
             "\n",
             "=========== FINAL TEST RESULTS (2023–) ===========\n",
-            "Acc=0.314, Macro-F1=0.283, Predicted classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
+            "Acc=0.387, Macro-F1=0.348, Predicted classes=[np.int64(-1), np.int64(0), np.int64(1)]\n",
             "\n",
             "Classification report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "          -1      0.667     0.074     0.133        54\n",
-            "           0      0.153     0.529     0.237        17\n",
-            "           1      0.453     0.511     0.480        47\n",
+            "          -1      0.423     0.227     0.295        97\n",
+            "           0      0.179     0.357     0.238        28\n",
+            "           1      0.474     0.557     0.512        97\n",
             "\n",
-            "    accuracy                          0.314       118\n",
-            "   macro avg      0.424     0.371     0.283       118\n",
-            "weighted avg      0.507     0.314     0.286       118\n",
+            "    accuracy                          0.387       222\n",
+            "   macro avg      0.358     0.380     0.348       222\n",
+            "weighted avg      0.414     0.387     0.383       222\n",
             "\n",
             "Confusion matrix (rows=true, cols=pred [-1,0,1]):\n",
-            " [[ 4 28 22]\n",
-            " [ 1  9  7]\n",
-            " [ 1 22 24]]\n"
+            " [[22 27 48]\n",
+            " [ 6 10 12]\n",
+            " [24 19 54]]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv(\"df.csv\")\n",
+        "print(df)\n",
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Govg373f9x6",
+        "outputId": "6271f918-ada8-40e2-928f-9a6febf667a1"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "            date  Last Price     ret_1  p_state0_h1  p_state1_h1  p_state2_h1  \\\n",
+            "0     1992-01-05        2.39       NaN     0.943529     0.055841     0.000629   \n",
+            "1     1992-01-12        2.43  0.016736     0.949237     0.050318     0.000445   \n",
+            "2     1992-01-19        2.48  0.020576     0.922941     0.075764     0.001295   \n",
+            "3     1992-01-26        2.55  0.028226     0.781818     0.212314     0.005868   \n",
+            "4     1992-02-02        2.57  0.007843     0.400583     0.581123     0.018294   \n",
+            "...          ...         ...       ...          ...          ...          ...   \n",
+            "1746  2025-06-22        4.06 -0.044706     0.842409     0.154882     0.002709   \n",
+            "1747  2025-06-29        4.00 -0.014778     0.938669     0.060752     0.000579   \n",
+            "1748  2025-07-06        4.10  0.025000     0.955329     0.044461     0.000210   \n",
+            "1749  2025-07-13        3.87 -0.056098     0.933028     0.066269     0.000704   \n",
+            "1750  2025-07-20        3.95  0.020672     0.849863     0.147592     0.002545   \n",
+            "\n",
+            "      target  \n",
+            "0          1  \n",
+            "1          1  \n",
+            "2          1  \n",
+            "3          1  \n",
+            "4          0  \n",
+            "...      ...  \n",
+            "1746      -1  \n",
+            "1747       1  \n",
+            "1748      -1  \n",
+            "1749       1  \n",
+            "1750      -1  \n",
+            "\n",
+            "[1751 rows x 7 columns]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['date', 'Last Price', 'ret_1', 'p_state0_h1', 'p_state1_h1',\n",
+              "       'p_state2_h1', 'target'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
         }
       ]
     }
