--- a/structured_prediction_models.ipynb
+++ b/structured_prediction_models.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "se93PG85SjlL"
+        "id": "j5xOs1lINIms"
       },
       "outputs": [],
       "source": []
@@ -26,26 +26,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#This notebook builds different modesl for predicting wheat prices\n",
+        "#This notebook builds different modesl for predicting corn prices\n",
         "\n",
         "The models are always a simple logistic regression and a LSTM, but the inputs change:\n",
+        "First we segment the training, val and test sets. Then we build different models:\n",
         "1.   Only price data\n",
         "2.   Price and prcp data\n",
         "3.   Price and SPI data\n",
-        "4.   Price, SPI and HMM data\n",
-        "\n"
+        "4.   Price, SPI and HMM data\n"
       ],
       "metadata": {
-        "id": "670hjM7QSuS1"
+        "id": "MG48muHWNOsR"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##1. Only price data"
+        "###1. Only price data"
       ],
       "metadata": {
-        "id": "FRI21pwSTG7u"
+        "id": "ydaX_QYUNRfl"
       }
     },
     {
@@ -54,7 +54,7 @@
         "###1.1 Logistic regression"
       ],
       "metadata": {
-        "id": "mfGVp98XTL-f"
+        "id": "PfvZwxmcNV5J"
       }
     },
     {
@@ -67,7 +67,7 @@
         "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix"
       ],
       "metadata": {
-        "id": "TvGu8TsGTEIO"
+        "id": "ufNxmmdsNfqp"
       },
       "execution_count": null,
       "outputs": []
@@ -110,7 +110,7 @@
         "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))\n"
       ],
       "metadata": {
-        "id": "hiPBYXclhpkL"
+        "id": "0KACUocaNgbZ"
       },
       "execution_count": null,
       "outputs": []
