--- a/weather data download.ipynb
+++ b/weather data download.ipynb
@@ -16,20 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "metadata": {
-        "patched_by": "chatgpt",
-        "tags": [
-          "force_week53_helper"
-        ],
-        "id": "44RyjWLweINh"
-      },
-      "source": [],
-      "outputs": [],
-      "execution_count": 1
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "sZIo_1oZ5d7W"
       },
@@ -46,9 +33,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "import time\n",
-        "import random\n",
-        "\n",
-        "\n"
+        "import random"
       ]
     },
     {
@@ -56,7 +41,7 @@
       "source": [
         "# Below is the download of weather data - daily percipitation - from NOOA api\n",
         "\n",
-        "I use a list of stations that i researched to be in the area of wheat growth and have data available with good consistency from 1970 to 2025.\n",
+        "I use a list of stations that i researched to be in the area of corn growth and have data available with good consistency from 1970 to 2025.\n",
         "\n",
         "The measure is \"precipitation\" which is defined as PRCP = Precipitation (tenths of mm)\n",
         "desription from nooa : https://www.ncei.noaa.gov/pub/data/ghcn/daily/readme.txt"
@@ -178,10 +163,10 @@
         "\n",
         "                resp, err = robust_get(session, URL, headers=HEADERS, params=params)\n",
         "                status_code = resp.status_code if resp is not None else \"ERR\"\n",
-        "                print(f\"    🔄 Offset: {offset} | Status: {status_code}\")\n",
+        "                print(f\"     Offset: {offset} | Status: {status_code}\")\n",
         "\n",
         "                if err is not None:\n",
-        "                    print(f\"    ❌ Error fetching data: {err}\")\n",
+        "                    print(f\"     Error fetching data: {err}\")\n",
         "                    # Break out of this year on unrecoverable/terminal error\n",
         "                    break\n",
         "\n",
@@ -189,7 +174,7 @@
         "                results = data.get(\"results\", [])\n",
         "\n",
         "                if not results:\n",
-        "                    print(f\"    ✅ No more data for {year} at offset {offset}\")\n",
+        "                    print(f\"     No more data for {year} at offset {offset}\")\n",
         "                    break\n",
         "\n",
         "                all_data.extend(results)\n",
@@ -218,7 +203,7 @@
         "id": "gAia90Pw7vQ7",
         "outputId": "694110bb-8913-42fd-dc00-2803691b9403"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1644,7 +1629,7 @@
         "id": "S0E_UYuR60oV",
         "outputId": "5fa1eee8-4b47-42fe-8448-1c28534ee8d2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1703,7 +1688,7 @@
         "id": "DqKXc7RHEbTF",
         "outputId": "78d1f010-6438-4969-f732-f9b504da61ec"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1734,7 +1719,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Below i aggregate the stations data into one singe data point for the state of Illinois where the wheat is grown. I have 6 stations in total from which I take the data. I average the percipitation across those to get the avg_percipitation value. In the end I have to see if despite doing that there are still any missing values (there aren't). After that I also aggregate the avg_perc variable into a weekly umber by just summing up the daily data over the week."
+        "Below i aggregate the stations data into one singe data point for the state of Illinois where the corn is grown. I have 6 stations in total from which I take the data. I average the percipitation across those to get the avg_percipitation value. In the end I have to see if despite doing that there are still any missing values (there aren't). After that I also aggregate the avg_perc variable into a weekly umber by just summing up the daily data over the week."
       ],
       "metadata": {
         "id": "-S9D0EcBVJp1"
@@ -1797,7 +1782,7 @@
         "id": "wjvCiAWIHE1D",
         "outputId": "43389017-7652-4835-fe37-ae749c7f4e9c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,7 +1823,7 @@
       "metadata": {
         "id": "4h9j4WZAhNpo"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1886,7 +1871,7 @@
       "metadata": {
         "id": "Vy8K3ctxh8KW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1912,7 +1897,7 @@
         "id": "O6VfWSltNQ1j",
         "outputId": "6c11b3ce-2979-4d2f-c078-0d1fe2917b27"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1943,7 +1928,7 @@
         "id": "k47Q2Kx-iXg8",
         "outputId": "61f59c00-039a-4477-b40d-2b76f0e75b55"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1979,7 +1964,7 @@
         "id": "kFcRGf4-PP6E",
         "outputId": "167dcefb-6b95-4c43-df57-af1f513be505"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2071,7 +2056,7 @@
         "id": "gBFnUEr_PJvP",
         "outputId": "abefe7bd-d169-4052-d5ed-882568652c9e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2108,7 +2093,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For now I still fit the SPI according to gamma distribution, even though the calc shows weibull is the best because I'm worried about look ahead bias here - can i use weibull?\n",
+        "**For now I still fit the SPI according to gamma distribution, even though the calc shows weibull is the best because I'm worried about look ahead bias here - can i use weibull?**\n",
         "\n",
         "I set the period for which SPI is averaged and compared to to 30 years to account for differing weather patterns that can appear. The results are quite robust to setting lookback period to None as well (meaning it always takes full sample)"
       ],
@@ -2208,7 +2193,7 @@
         "id": "b533aDXufeIB",
         "outputId": "8cb36967-d58d-445f-a088-12ef400a9000"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2257,7 +2242,7 @@
         "id": "lISp8HSLidWb",
         "outputId": "6a95748e-f16f-4651-97a0-afb27c7d9e0a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2313,7 +2298,7 @@
         "id": "AHrUW9j_GSId",
         "outputId": "d07c25f0-21c5-4cbc-d583-4df7b4a98659"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2400,7 +2385,7 @@
         "id": "aflxQHJwi02j",
         "outputId": "d1e5d3e4-df92-4086-ea5a-4d7084d1aefb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2457,7 +2442,7 @@
         "id": "e7qrPdKkNlCv",
         "outputId": "21a4ad01-3e8e-4060-8759-417ab5243895"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,7 +2491,7 @@
       "metadata": {
         "id": "eKl1aQlRNIn1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2530,7 +2515,7 @@
         "id": "nCFtF82fNIy-",
         "outputId": "abeada91-beb2-4c56-85fc-4950e7f24bc3"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3069,7 +3054,7 @@
       "metadata": {
         "id": "669xxm3bNI-O"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     }
   ]
