--- a/data_analysis_for_prediction_models.ipynb
+++ b/data_analysis_for_prediction_models.ipynb
@@ -55,14 +55,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# =========================\n",
+        "#_______________________________________________________________________________________________________\n",
         "# merge the two datasets based on dates from weekly drought probabilities, then check for missing\n",
         "# values - if there is a missing values fill by last available date - the furthest back you can go is\n",
-        "# 4 days (data on Sunday never available so last date allowed is Wed), shwo in a table how many times you need fallback\n",
-        "# =========================\n",
-        "# weekly_probs_h1 : DataFrame with Sunday 'date' + state prob columns (e.g., p_state0_h1, ...)\n",
-        "# daily_corn      : DataFrame with business-day 'date' + price columns (e.g., 'close', ...)\n",
-        "# If your dates are index instead of a column, the helper below lifts them.\n",
+        "# 4 days (data on Sunday never available so last date allowed is Wed - and most fallback should be 2),\n",
+        "# shwo in a table how many times you need fallback for sanity check\n",
+        "#____________________________________________________________________________________________________\n",
         "\n",
         "def ensure_date_col(df: pd.DataFrame, date_col: str = \"date\") -> pd.DataFrame:\n",
         "    out = df.copy()\n",
@@ -85,9 +83,9 @@
         "\n",
         "use_dc = dc[[\"date\"] + price_cols].copy()\n",
         "\n",
-        "# =================================\n",
+        "# __________________\n",
         "# Dataset A: exact Friday (Sun-2d)\n",
-        "# =================================\n",
+        "# _________________\n",
         "A = wp.copy()\n",
         "A[\"date_for_price2\"] = A[\"date\"] - pd.Timedelta(days=2)\n",
         "\n",
@@ -98,16 +96,16 @@
         "      .reset_index(drop=True)\n",
         ")\n",
         "\n",
-        "# IMPORTANT: record whether Friday had price BEFORE any fallback fill\n",
+        "# record whether Friday had price BEFORE any fallback fill\n",
         "A[\"fri_has_price\"] = A[price_cols].notna().any(axis=1)\n",
         "\n",
         "# Save A without helper cols (keep Sunday date + probs + prices)\n",
         "A_out = A.drop(columns=[\"date_for_price2\"])\n",
         "A_out.to_csv(\"joined_sunday_minus2_exact.csv\", index=False)\n",
         "\n",
-        "# ======================================================\n",
+        "# __________________________________________\n",
         "# Dataset B: Friday or last available (≤ Sunday - 4 days)\n",
-        "# ======================================================\n",
+        "# ___________________________________________\n",
         "# A, price_cols, wp, use_dc already defined above\n",
         "\n",
         "# As-of join: last available price at/before Sunday, but only within 4 days\n",
@@ -152,9 +150,9 @@
         "print(\"Rows with fallback_days > 4:\", int((B_out[\"fallback_days\"] > 4).sum()))\n",
         "print(\"Saved:\", \"joined_sunday_minus2_or_last_max4d.csv\")\n",
         "\n",
-        "# ==========================\n",
+        "# ________________________\n",
         "# NaN summary & comparisons\n",
-        "# ==========================\n",
+        "# __________________\n",
         "def nan_summary(df: pd.DataFrame, cols: list[str] | None = None) -> pd.DataFrame:\n",
         "    if cols is None:\n",
         "        cols = df.columns.tolist()\n",
@@ -168,9 +166,9 @@
         "print(\"NaN summary (ALL columns) — B (fallback):\")\n",
         "print(nan_summary(B_out), end=\"\\n\\n\")\n",
         "\n",
-        "# ======================\n",
+        "#_______________________\n",
         "# fallback analysis table\n",
-        "# ======================\n",
+        "#__________________\n",
         "def fallback_counts_table(df: pd.DataFrame, col: str = \"fallback_days\",\n",
         "                          values=(2, 3, 4)) -> pd.DataFrame:\n",
         "    s = pd.to_numeric(df[col], errors=\"coerce\")  # ensure numeric\n",
